--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HR Flow – Best HR Management System for SMEs</title>
-    <meta name="description" content="HR Flow is an easy-to-use HR management system designed for SMEs, offering payroll, leave tracking, and employee management.">
-    <meta name="keywords" content="HR software, HR Flow, payroll management, leave tracking, employee database, Singapore HR software">
+    <title>HR Flow – Simple & Efficient HR Management for SMEs</title>
+    <meta name="description" content="HR Flow is a modern HR software for SMEs. Manage payroll, leave, and employee data easily.">
+    <meta name="keywords" content="HR software, payroll, employee management, leave tracking, HR system">
     <meta name="robots" content="index, follow">
-    <meta property="og:title" content="HR Flow – Best HR Management System for SMEs">
-    <meta property="og:description" content="Manage HR tasks effortlessly with HR Flow. Ideal for SMEs looking for payroll, leave, and employee management solutions.">
+    <meta property="og:title" content="HR Flow – Best HR Software for SMEs">
+    <meta property="og:description" content="Manage HR tasks effortlessly with HR Flow. Designed for SMEs needing payroll, leave, and employee management.">
     <meta property="og:url" content="https://hrflow.netlify.app/">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://hrflow.netlify.app/og-image.png">
+    <meta property="og:image" content="https://hrflow.netlify.app/logo.png">
+
     <meta name="author" content="Lovable" />
   </head>
 
